# laserScan_Similarity

./: CMakeLists.txt  README.md  package.xml
cfg/: voxel_filter.yaml
data/: 1488696234.489085.vtk  1488696514.780170.vtk
data/test/: 1488696515.889616.vtk
kitti_benchMark/poses/: loop.txt  poses(z-delta).mat
kitti_test/: LOOP
kitti_training/: groundTruth.mat  poses.mat
launch/: laserScan_Similarity.launch  laserScan_Similarity_Continuous.launch  laserScan_Similarity_Rings_Continuous.launch  laserScan_Similarity_kitti.launch  laserScan_Similarity_kitti_Rings.launch
matlabRst/: CSC_Zonly_20sec20_tao0.015.mat  SM_range0_sec20_sec20.mat  garden&CSC_rings&&4pics.mat  garden&CSC_rings_sec20_sec20.mat  garden_Zonly_20sec20_tao0.015_notGood.mat  round0_Continuous.mat  round0_Continuous_0308.fig  round0_Continuous_filterByRange.fig  round0and2_sucesful.mat  scan012Compare.mat
src/: SM01lization.m  SMCollection.m  absSM.m  cosSM.m  drawCurves.m  drawEMD.m  drawLoop.m  drawSampleLoop.m  drawSimilarityMatrix.m  drawXYZ.m  emdSM.m  getCurves.m  getHalfIndex.m  getImageCells.m  getIndex.m  getSM.m  getTFIndex.m  getTFPN.m  getTestLabel.m  getTrueSM.m  getXYZ.m  laserScan_Similarity.cpp  laserScan_Similarity_Continuous.cpp  laserScan_Similarity_Rings_Continuous.cpp  laserScan_Similarity_kitti.cpp  laserScan_Similarity_kitti_Rings.cpp  plotC.m  sample.m  saveImagesName.m  saveImagesRGB.m  saveImagesSingle.m  showImages.m
